PROJECT (dnf-plugins-extras NONE)
CMAKE_MINIMUM_REQUIRED (VERSION 2.4)

if (NOT PYTHON_DESIRED)
    set (PYTHON_DESIRED "2")
endif()

if (${PYTHON_DESIRED} STREQUAL "2")
	FIND_PACKAGE (PythonInterp REQUIRED)
else()
	SET(Python_ADDITIONAL_VERSIONS 3.3)
	FIND_PACKAGE(PythonLibs 3.0)
	FIND_PACKAGE(PythonInterp 3.0 REQUIRED)
endif()

EXECUTE_PROCESS(COMMAND ${PYTHON_EXECUTABLE} -c "from sys import stdout; from distutils import sysconfig; stdout.write(sysconfig.get_python_lib())" OUTPUT_VARIABLE PYTHON_INSTALL_DIR)
EXECUTE_PROCESS(COMMAND ${PYTHON_EXECUTABLE} -c "import sys; sys.stdout.write('%s.%s' % (sys.version_info.major, sys.version_info.minor))" OUTPUT_VARIABLE PYTHON_MAJOR_DOT_MINOR_VERSION)
MESSAGE(STATUS "Python install dir is ${PYTHON_INSTALL_DIR}")

SET (SYSCONFDIR /etc)
SET (SYSTEMD_DIR /usr/lib/systemd/system)
SET (TARGET_WANTSDIR ${SYSTEMD_DIR}/system-update.target.wants)
SET (SERVICE dnf-system-upgrade.service)

ADD_SUBDIRECTORY (doc)
ADD_SUBDIRECTORY (etc)
ADD_SUBDIRECTORY (plugins)
ADD_SUBDIRECTORY (po)

INSTALL (FILES ${SERVICE} DESTINATION ${SYSTEMD_DIR} PERMISSIONS "OWNER_READ" "OWNER_WRITE" "GROUP_READ" "WORLD_READ")
INSTALL (DIRECTORY DESTINATION ${TARGET_WANTSDIR})

if (EXISTS ${TARGET_WANTSDIR})
    message(STATUS "FUCKS given")
else ()
    message(STATUS "FUCKS not given")
endif()

EXECUTE_PROCESS (COMMAND ln -sf ${SYSTEMD_DIR}/${SERVICE} ${TARGET_WANTSDIR}/${SERVICE}
  RESULT_VARIABLE rc
  OUTPUT_VARIABLE output
  ERROR_VARIABLE error)

message(STATUS "RESULT_VARIABLE ${rc}")
message(STATUS "OUTPUT_VARIABLE ${output}")
message(STATUS "ERROR_VARIABLE ${error}")
message(STATUS "${SYSTEMD_DIR}/${SERVICE} ${TARGET_WANTSDIR}/")
